Fix overflow on smaller screens, amend font sizes on smaller screens

--- a/_sass/layouts/pages/_misc.scss
+++ b/_sass/layouts/pages/_misc.scss
@@ -124,6 +124,26 @@ body {
     }
 }
 
+body.collective {
+    .content-box {
+        h1, .h1 {
+            @media (max-width: 767px) {
+                font-size: 2.8rem;
+            }
+
+            @media (max-width: 567px) {
+                font-size: 3rem;
+            }
+        }
+
+        h2, .h2 {
+            @media (max-width: 567px) {
+                font-size: 1.2rem;
+            }
+        }
+    }
+}
+
 body.contact {
     .content-box {
         @media (max-width: 567px) {
@@ -156,6 +176,10 @@ body.faq, body.faqs {
                 }
 
                 a {
+                    @media (max-width: 1199px) {
+                        word-break: break-all;
+                    }
+
                     @media (max-width: 567px) {
                         font-size: 1.2rem;
                     }
